# barometre-dashboard

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
assets/: .~lock.codes_insee.csv#  codes_insee.csv  codes_insee.json  codes_insee_simple.json  communes_insee.cbor  communes_insee.cbor.zstd  departements.cbor  departements.cbor.zstd  preparation_insee.ipynb  tailwind.css
assets/styling/: blog.css  main.css
src/: main.rs  types.rs
src/components/: commune_progress.rs  dashboard.rs  dashboard_summary.rs  hero.rs  mod.rs
src/views/: blog.rs  home.rs
